@@ -86,7 +86,7 @@
   <p align="left">Information about a certain floor can be obtained elsewhere 
     in the script, by referencing the floor in this manner:</p>
   <p align="left"><font size="2" face="Courier New, Courier, mono">Floor(<em>number</em>).<em>parameter</em></font></p>
-  <p align="left">Available parameters are Altitude, FullHeight and InterfloorHeight. 
+  <p align="left">Available parameters are Altitude, Height, FullHeight and InterfloorHeight. 
     Note that this function must only be called after the specified floor has 
     been created.</p>
   <p align="left">Example:<font size="2" face="Courier New, Courier, mono"><br>
