@@ -38,6 +38,7 @@ in a shaft or an elevator
 -added fullscreen support, activated by F10
 -fixed an issue where walls along the Z axis would have the side negative and
 positives switched
+-height element can now be chosen from the script's object parameters
 
 Version 1.4.1 (2.0 Alpha 4.1)
 -------------------------
